@startuml
'logical-view-2'

hide class circle

class TrainingData {
    name: str
    uploaded: datetime
    tested: datetime
    parameter: list[Hyperparameter]
    testing: list[Client]
    training: list[Client]
}

class Hyperparameter {
    max_depth: int
    min_samples_leaf: int
    data: TrainingData
    quality: float
}

class Client {
    Seniority: int
    Home: int
    Time: int
    Age: int
    Marital: int
    Records: int
    Job: int
    Expenses: int
    Income: int
    Assets: int
    Debt: int
    Amount: int
    Price: int
}

TrainingData *--> Hyperparameter : tuning >
TrainingData *--> Client : training >
TrainingData *--> Client : testing >
Hyperparameter ..> TrainingData : data >

@enduml
